# PJ-AG4

./: .env.example  .gitignore  AGENT_CONTEXT.md  APP_FLOW.md  BACKEND_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md  dashboard_template.html  lessons.md  plan.md  progress.txt  pyproject.toml
docs/: project_design.md
docs/ai/: AGENT.md  APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  README.md  TECH_STACK.md  architecture_refactor.md
examples/: run_default.py
quant/: README.md  common.py  metrics.py  reporting.py  run_benchmarks.py  run_full_quant.py  run_sensitivity.py  strategies.py
scripts/: run_simulation.py
src/pj_ag4/: __init__.py  agents.py  cli.py  config.py  contracts.py  dashboard.py  environment.py  simulation.py  strategy_registry.py  timeseries.py  utils.py  visualization.py  web.py
src/pj_ag4/core/: __init__.py  runtime.py
src/pj_ag4/data/: __init__.py  observation.py
src/pj_ag4/providers/: __init__.py  openai_compatible.py
tests/: conftest.py  test_agent_styles.py  test_config_env.py  test_dashboard.py  test_environment.py  test_llm_agent.py  test_observation_builder.py  test_quant_common.py  test_quant_scripts.py  test_simulation.py  test_strategy_registry.py  test_timeseries.py  test_web.py
